[package]
authors = ["The Cranelift Project Developers"]
name = "alexcrichton-cranelift-frontend"
version = "0.52.0"
description = "Cranelift IR builder helper"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
categories = ["no-std"]
repository = "https://github.com/bytecodealliance/cranelift"
readme = "README.md"
edition = "2018"

[lib]
name = "cranelift_frontend"

[dependencies]
alexcrichton-cranelift-codegen = { path = "../cranelift-codegen", version = "0.52.0", default-features = false }
target-lexicon = "0.10"
log = { version = "0.4.6", default-features = false }
hashbrown = { version = "0.6", optional = true }
smallvec = { version = "1.0.0" }

[features]
default = ["std", "basic-blocks"]
std = ["alexcrichton-cranelift-codegen/std"]
core = ["hashbrown", "alexcrichton-cranelift-codegen/core"]

# Temporary feature that enforces basic block semantics.
basic-blocks = ["alexcrichton-cranelift-codegen/basic-blocks"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bytecodealliance/cranelift" }
