[package]
authors = ["The Cranelift Project Developers"]
name = "alexcrichton-cranelift-preopt"
version = "0.52.0"
description = "Support for optimizations in Cranelift"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
repository = "https://github.com/bytecodealliance/cranelift"
categories = ["no-std"]
readme = "README.md"
keywords = ["optimize", "compile", "compiler", "jit"]
edition = "2018"

[lib]
name = "cranelift_preopt"

[dependencies]
alexcrichton-cranelift-codegen = { path = "../cranelift-codegen", version = "0.52.0", default-features = false }
alexcrichton-cranelift-entity = { path = "../cranelift-entity", version = "0.52.0" }
# This is commented out because it doesn't build on Rust 1.25.0, which
# cranelift currently supports.
# rustc_apfloat = { version = "0.1.2", default-features = false }

[features]
default = ["std"]
std = ["alexcrichton-cranelift-codegen/std"]
core = ["alexcrichton-cranelift-codegen/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bytecodealliance/cranelift" }
