[package]
authors = ["The Cranelift Project Developers"]
name = "alexcrichton-cranelift"
version = "0.52.0"
description = "Umbrella for commonly-used cranelift crates"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
repository = "https://github.com/bytecodealliance/cranelift"
categories = ["no-std"]
readme = "README.md"
keywords = ["compile", "compiler", "jit"]
edition = "2018"

[lib]
name = "cranelift"

[dependencies]
alexcrichton-cranelift-codegen = { path = "../cranelift-codegen", version = "0.52.0", default-features = false }
alexcrichton-cranelift-frontend = { path = "../cranelift-frontend", version = "0.52.0", default-features = false }

[features]
default = ["std"]
std = ["alexcrichton-cranelift-codegen/std", "alexcrichton-cranelift-frontend/std"]
core = ["alexcrichton-cranelift-codegen/core", "alexcrichton-cranelift-frontend/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bytecodealliance/cranelift" }
