[package]
name = "alexcrichton-cranelift-codegen-meta"
authors = ["The Cranelift Project Developers"]
version = "0.52.0"
description = "Metaprogram for cranelift-codegen code generator library"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cranelift"
readme = "README.md"
edition = "2018"

[lib]
name = "cranelift_codegen_meta"

[dependencies]
alexcrichton-cranelift-codegen-shared = { path = "../shared", version = "0.52.0" }
alexcrichton-cranelift-entity = { path = "../../cranelift-entity", version = "0.52.0" }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bytecodealliance/cranelift" }

[package.metadata.docs.rs]
rustdoc-args = [ "--document-private-items" ]
